--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
     "@nestjs/common": "^8.0.0",
-    "@nestjs/config": "^1.1.5",
+    "@nestjs/config": "^1.1.6",
     "@nestjs/core": "^8.0.0",
     "@nestjs/jwt": "^8.0.0",
     "@nestjs/mapped-types": "^1.0.0",
@@ -32,6 +33,8 @@
     "@types/cookie-parser": "^1.4.2",
     "@types/passport-jwt": "^3.0.6",
     "bcrypt": "^5.0.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "cookie-parser": "^1.4.6",
     "joi": "^17.5.0",
     "nestjs-joi": "^1.6.0",
