--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/platform-express": "^8.0.0",
     "@types/bcrypt": "^5.0.0",
     "@types/cookie-parser": "^1.4.2",
+    "@types/hapi__joi": "^17.1.8",
     "@types/passport-jwt": "^3.0.6",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
